# Speech-emotion-detection

./: .gitignore  README.md
backend/: README.md  main.py  predict.py  pyproject.toml  requirements.txt  sample.py  y.npy
backend/model_upload/: README.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx
