[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "absl-py",
    "astunparse",
    "audioread",
    "blinker",
    "certifi",
    "cffi",
    "charset-normalizer",
    "click",
    "contourpy",
    "cycler",
    "decorator",
    "Flask",
    "Flask-Cors",
    "flatbuffers",
    "fonttools",
    "gast",
    "google-pasta",
    "grpcio",
    "h5py",
    "idna",
    "itsdangerous",
    "Jinja2",
    "joblib",
    "kiwisolver",
    "lazy_loader",
    "libclang",
    "librosa",
    "llvmlite>=0.40.0",
    "Markdown",
    "markdown-it-py",
    "MarkupSafe",
    "matplotlib",
    "mdurl",
    "ml-dtypes",
    "msgpack",
    "namex",
    "numba>=0.57.0",
    "numpy",
    "opencv-python",
    "opt_einsum",
    "optree",
    "packaging",
    "pandas",
    "pillow",
    "platformdirs",
    "pooch",
    "protobuf",
    "pycparser",
    "Pygments",
    "pyparsing",
    "python-dateutil",
    "pytz",
    "requests",
    "rich",
    "scikit-learn",
    "scipy",
    "seaborn",
    "six",
    "sounddevice",
    "soundfile",
    "soxr",
    "tensorboard",
    "tensorboard-data-server",
    "tensorflow>=2.16.2",
    "tensorflow-io-gcs-filesystem",
    "tensorflow-macos>=2.16.0",
    "tensorflow-metal",
    "termcolor",
    "threadpoolctl",
    "typing_extensions",
    "tzdata",
    "urllib3",
    "Werkzeug",
    "wrapt",
]
